--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: '21'
+          distribution: 'zulu'
           cache: maven
       - name: Build with Maven
         run: mvn -B test --file pom.xml
